<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="@drawable/backgroundgradient">>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="match_parent"
		android:layout_height="match_parent" android:weightSum="1">
<ImageView
		    android:id="@+id/imageView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:src="@drawable/mmtitle" />
		<ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="114dp"
		    android:layout_height="174dp"
		    android:layout_gravity="center"
		    android:src="@drawable/popcornhi" >
</ImageView>
			
		<Button android:id="@+id/newgameButton" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/newgame">
		</Button>
		<Button android:id="@+id/continuegameButton" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/continuegame">
		</Button>
		<Button android:id="@+id/boxofficeButton" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/seeboxoffice">
		</Button>
		
		<Button android:id="@+id/prefsButton" android:layout_height="wrap_content"
			android:text="@string/prefs" android:layout_width="fill_parent">
		</Button>
		
		<Button android:id="@+id/creditsButton" android:layout_height="wrap_content"
			android:text="@string/credits" android:layout_width="fill_parent">
		</Button>

	</LinearLayout>
</ScrollView>
