<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >
	
	<include layout="@layout/scorebar"/>
	
	<TextView
		android:id="@+id/chosen"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=""
		android:textAppearance="?android:attr/textAppearanceLarge" >
	</TextView>
	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/actor" >
	</TextView>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/actorLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	<Spinner
		android:id="@+id/spinner1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		/>
	</LinearLayout>
	<TextView
		android:id="@+id/actorPrice"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/actorPrice" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <Button
	        android:id="@+id/produceFilm"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/make_this_film" />

	    <Button
	        android:id="@+id/addActor"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/hire_another_actor" />
	</LinearLayout>

</LinearLayout>

</ScrollView>