<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:text="@string/contentDesc" android:id="@+id/contentDesc" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/violence" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:gravity="center"></TextView>
    <SeekBar android:layout_height="wrap_content" android:id="@+id/violenceBar" android:layout_width="match_parent"></SeekBar>
    <TextView android:layout_height="wrap_content" android:text="@string/sex" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:gravity="center"></TextView>
    <SeekBar android:layout_height="wrap_content" android:id="@+id/sexBar" android:layout_width="match_parent"></SeekBar>
    <TextView android:layout_height="wrap_content" android:text="@string/language" android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="match_parent" android:gravity="center"></TextView>
    <SeekBar android:layout_height="wrap_content" android:id="@+id/rudeBar" android:layout_width="match_parent"></SeekBar>
    
</LinearLayout>
